update js file location

--- a/index.html
+++ b/index.html
@@ -87,6 +87,6 @@
       <a href="https://twitter.com/visionsremain" target="new" class="footer-links"><img src="logos/twitter2.png" width="60" height="60"></a>
     </div>
     </footer>
-    <script src = "/Users/johannaherman/Desktop/Gather website/add-content.js"></script>
+    <script src = "add-content.js"></script>
     </body>
   </html>
