--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
       <title>Gather</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
         <!--take control of viewport-->
@@ -24,7 +23,7 @@
               <a href="#demonstrate-nav" class="nav-link" onclick="hideNav()">Demonstrate</a>
             </li>
             <li class="nav-burger">
-              <a href="javascript:void(0);" class="material-icons" id="burger" onclick="burgerMenu()">menu</a>
+              <a href="javascript:void(0);" id="burger" onclick="burgerMenu()"><img src="logos/white_burger.png" height="50" width="50"></a>
           </ul>
         </div>  
         <div class="title">
@@ -40,12 +39,11 @@
         <div class="intro" id="protest-nav">
         <h1 class="intro-title">Protest, organise, change</h1>
           <div class="intro-main">
-            <p class="intro-text">Public protest is a vital part of British civil, political, economic, social and cultural life.  It is the engine that drives positive social change. However, too often, people&apos;s efforts are frustrated due to a lack of awareness of their rights and obligations when organising public events.</p>
-            <p class="intro-text">GATHER will be a resource for people planning marches and demonstrations.  Right now, our beta provides information so organisers are sure of the legality of their protest and can stand firm when challenged.</p>
+            <p class="intro-text">Public protest is a vital part of civil, political, economic, social and cultural life.  It is the engine that drives positive social change. However, too often, people&apos;s efforts are frustrated due to a lack of awareness of their rights and obligations when organising public events.</p>
+            <p class="intro-text">GATHER is a resource for people planning marches and demonstrations.  Right now, our beta provides information so organisers are sure of the legality of their protest and can stand firm when challenged.</p>
             <p class="intro-text">Over the coming months we will be adding further resources to help you plan and complete effective protest as well as the broader context of community organising.</p>
           </div>
-          <!--<button onclick="previousSection()" id="arrow" class="material-icons">arrow_upward</button>!-->
-          <a href="#home" class="material-icons" id="arrow-one">arrow_upward</a>
+          <a href="#home" id="arrow-one"><img src="logos/white_arrow.png" height="50" width="50"></a>
       </div>
       <div class="march" id="march-nav">
         <h1 class="march-title">March</h1>
@@ -64,7 +62,7 @@
           </div>
           <figure class="figure-march"><img src="images/marchpeople.png" id="march-img"></figure>
           <div class="march-arrow">
-          <a href="#protest-nav" class="material-icons" id="arrow-two">arrow_upward</a>
+          <a href="#protest-nav" id="arrow-two"><img src="logos/white_arrow.png" height="50" width="50"></a>
           </div>
       </div>
       <div class="demonstration" id="demonstrate-nav">
@@ -77,7 +75,7 @@
                 <p class="demonstration-text">If arranging at short notice, avoid Trafalgar Square and Parliament Square.  There are specific rules governing these spaces and you will need to allow enough time to contact the GLA on 0207 983 4750.</p>
               </div>
             </div>
-            <a href="#march-nav" class="material-icons" id="arrow-three">arrow_upward</a>
+            <a href="#march-nav" id="arrow-three"><img src="logos/white_arrow.png" height="50" width="50"></a>
           </div>
     <footer class="footer">
     <p class="footer-text">Made by <a href="https://www.linkedin.com/in/johannaherman/" target="new">Johanna</a> for the Founders and Coders October 2017 cohort application</p>
